@@ -242,6 +242,7 @@ All:
 - Fix memory leak when destroying wxThread (Antti Nietosvaara, #22840).
 - Add serial number to wxwin.m4 file (#22848).
 - Update Expat submodule to include the fix for CVE-2022-40674.
+- Allow 'T' separator in wxDateTime::ParseDateTime() (Blake-Madden, #22999).
 
 All (GUI):
 
